...
"wallet_onboarding_app_title" = "COVID Certificate";

/*Text im Onboardingscreen "Die App"*/
"wallet_onboarding_app_text" = "The app lets you store COVID certificates securely on your smartphone and present them easily.";

/*Weiter-Button Titel*/
"continue_button" = "Next";

/*Header im Onboarding-Screen "Datenschutz"*/
"wallet_onboarding_privacy_header" = "Data protection";

/*Titel im Onboardingscreen "Datenschutz"*/
"wallet_onboarding_privacy_title" = "Your data remains \nin the app";
...
"wallet_onboarding_privacy_privacypolicy_title" = "Privacy policy";

/*Titel des Nutzungsbedingungen-Elements im Onboardingscreen "Datenschutz"*/
"wallet_onboarding_privacy_conditionsofuse_title" = "Terms of use";

/*Button zum Abschliessen des Onboardings*/
"wallet_onboarding_accept_button" = "Accept";
"language_key" = "en";

/*Header im "So funktionierts" Screen beim Scannen*/
"wallet_scanner_howitworks_header" = "How it works";

/*Titel im "So funktionierts" Screen beim Scannen*/
...
"verifier_faq_works_answer_6" = "No, no data is stored during the verification process, be it in the COVID Certificate Check app or in a central system. Therefore, it is not possible to trace which COVID certificate was checked by whom, when and where.";

/*iOS Button zum Einstellungen öffnen*/
"ios_settings_open" = "Settings";

/*Wallet: Onboarding externer Link zu Datenschutz*/
"wallet_onboarding_external_privacy_button" = "Privacy policy & Terms of use";

/*Wallet: Hinweis im Zertifikat Detail*/
"wallet_certificate_detail_note" = "This certificate is not a travel document. \n<br /><br />\nThe scientific evidence on COVID-19 vaccination, testing, and recovery continues to evolve, including with regard to new virus variants of concern. \n<br /><br />\nPlease check the restrictions and rules on validity that apply at your destination before you travel. When you’re abroad, the validity of you
"wallet_terms_privacy_link" = "https://www.bit.admin.ch/bit/en/home/documentation/covid-certificate-app.html";
"verifier_terms_privacy_link" = "https://www.bit.admin.ch/bit/en/home/documentation/covid-certificate-check-app.html";

...
